[project]
name = "databloom-gradio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.1.8",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "exceptiongroup==1.3.1",
    "fastapi==0.128.0",
    "ffmpy==1.0.0",
    "filelock==3.19.1",
    "fonttools==4.60.2",
    "fsspec==2025.10.0",
    "gradio==4.44.1",
    "gradio-client==1.3.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.23.4",
    "idna==3.11",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "kiwisolver==1.4.7",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.4",
    "mdurl==0.1.2",
    "numpy==2.0.2",
    "orjson==3.11.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==10.4.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pyparsing==3.3.1",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "ruff==0.14.13",
    "semantic-version==2.10.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "starlette==0.49.3",
    "tomlkit==0.12.0",
    "tqdm==4.67.1",
    "typer==0.21.1",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uvicorn==0.39.0",
    "websockets==12.0",
    "zipp==3.23.0",
]
