[project]
name = "databloom-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anthropic==0.75.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "dotenv==0.9.9",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.3",
    "narwhals==2.12.0",
    "numpy==2.3.5",
    "openai==2.8.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "protobuf==6.33.1",
    "pyarrow==21.0.0",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydeck==0.9.1",
    "pygments>=2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "referencing==0.37.0",
    "reportlab>=4.4.9",
    "requests==2.32.5",
    "rpds-py==0.29.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "streamlit==1.51.0",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "wikipedia==1.4.0",
]
